# modu-lsp

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-modu.h  tree-sitter-modu.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_modu/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterModuTests/: TreeSitterModuTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
tests/: yap.modu
