[package]
name = "tree-sitter-modu"
description = "parser for modu :3"
version = "0.1.0"
authors = ["aquiffoo"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "modu"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/learnmodu/modu-lsp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
